# ProgSem2

./: bin.c  files.c  lists.c  screens.odt  selectsort.c  sort.c
RGR/: CMakeLists.txt  dict.txt  input.txt  main.c  output.txt  translatorFuncs.c  translatorFuncs.h
lib/: CMakeLists.txt  dynamic_exe  static_exe
lib/include/: funcs.h
lib/src/: funcs.c  main.c
tests/: CMakeLists.txt  sorting.c  sorting.h  unit_tests.c
threads/: a.out  graph.py  laba7.md  thread  threads.c
